# flash-flood-zones-hp

./: .gitignore  CLAUDE.md  LEARNINGS.md  NEXT_STEPS.md  README.md  pyproject.toml
.claude/: PLAN.md
.streamlit/: config.toml
dashboard/: app.py  generate_html_dashboard.py  requirements.txt
literature/markdown/: 00_literature_synthesis.md  00_research_gaps.md  Abedi2021_XGBoost_RF_BRT_flash_flood.md  Assam2022_hybrid_ML_Brahmaputra_flood_hazard.md  Bentivoglio2022_deep_learning_flood_mapping_review.md  ChenYuguo2023_modeling_rules_flash_flood_ML.md  Chenab2024_GLOF_susceptibility_Western_Himalaya.md  DataUncertainty2025_non_flood_samples.md  Dixit2026_SMART_flood_EWS_Himalayas_NHESS.md  FloodDriversIndia2025_npj_Natural_Hazards.md  FloodRisk2025_Indus_Kohistan_ML_BWM.md  FutureFloodSusceptibility2025_climate_LULC.md  Ghosh2023_Karnali_Nepal_flood_susceptibility_ML.md  HiFloDAT2025_Kullu_flood_database.md  Inventories_BeasRiver2020_flash_flood_prone_reaches.md  Kosi2025_ML_flood_susceptibility_Himalayan_foreland.md  KumarVinod2022_floods_flash_floods_Himachal_Pradesh.md  Majeed2023_AHP_frequency_ratio_flash_flood_Jhelum.md  MultiHazard2022_Kargil_Ladakh_Trans_Himalaya.md  NHESS2026_July2023_Himachal_flood_analysis.md  Nagamani2024_flash_flooding_Himalayan_case_study.md  Oddo2024_ConvLSTM_flash_flood_prediction.md  Rachit2025_CNN_UNet_HP_Uttarakhand_flash_flood.md  ReviewPaper2024_flash_flood_bibliometric_soft_computing.md  (+9 more)
paper/: main.tex  references.bib
scripts/: 01_download_boundaries.py  02_download_rasters.py  03_gee_sar_inventory.py  03_gee_script.js  04_preprocess_terrain.py  05_watershed_delineation.py  06_assemble_factors.py  07_build_flood_inventory.py  08_train_baseline_models.py  09_train_gnn.py  10_conformal_prediction.py  11_shap_analysis.py  12_generate_paper_figures.py  13_run_all.py  14_generate_study_area_map.py  15_generate_workflow_figure.py  16_infrastructure_exposure.py  17_prepare_dashboard_data.py  config.py
(+32 files in other folders)
