[project]
name = "flash-flood-zones-hp"
version = "0.1.0"
description = "Flash Flood Risk Intelligence for Himachal Pradesh — GNN + Conformal Prediction"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Core scientific
    "numpy>=2.4",
    "pandas>=3.0",
    "scipy>=1.15",
    # Geospatial
    "geopandas>=1.1",
    "rasterio>=1.5",
    "shapely>=2.1",
    "pyproj>=3.7",
    "pysheds>=0.4",          # watershed delineation from DEM
    "osmnx>=2.0",             # OpenStreetMap data download
    "fiona>=1.10",
    # ML — baselines
    "scikit-learn>=1.8",
    "xgboost>=3.0",
    "lightgbm>=4.6",
    # ML — GNN
    "torch>=2.6",
    "torch-geometric>=2.7",
    # Uncertainty
    "mapie>=1.3",             # conformal prediction
    # Explainability
    "shap>=0.51",
    # Visualisation
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "contextily>=1.6",        # basemap tiles for maps
    "folium>=0.17",           # interactive HTML maps
    # Utilities
    "tqdm>=4.67",
    "pyyaml>=6.0",
    "requests>=2.32",
    # GEE (SAR processing)
    "earthengine-api>=1.5",
    # Notebook
    "jupyter>=1.1",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
